2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.
	* alocal/rtems-top.a4: Add AC_CONFIG_AUX_DIR.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Add ACLOCAL, AUTOHEADER.
	Don't check for auto*tool-versions.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config-ml.in: Don't build sh-rtems ml and ml/m2 multilib variants.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Introduce depend-gcc.
	* automake/lib.am: Remove stray comment.
	* automake/local.am: Introduce depend-gcc.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config-ml.in: Don't build arm-rtems/*fpu* multilib variants.

2003-02-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-top.m4: Set PROJECT_ROOT unconditionally.
	* automake/local.am: Remove $(ARCH), clean-local.
	* automake/compile.am: Add $(ARCH), clean-local.
	Set CXXFLAGS = @RTEMS_CFLAGS@ $(XCXXFLAGS).

2003-02-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove references to obsoleted files
	aclocal/enable-gcc28.m4, aclocal/enable-libcdir.m4.

2003-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config.sub (rtems-4-6-branch only): New from subversion.
	* bootstrap (rtems-4-6-branch only): Do not delete config.sub.

2003-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-target-name.m4: Transform tic4x -> RTEMS_CPU=c4x.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-4.6.0pre1.

2003-02-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-4.6.0pre1.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Remove attempts to detect autoconf and automake using
	"which" (PR 325).

2003-02-06	Joel Sherrill <joel@OARcorp.com>

	* README.configure: Updated to reflect new BSPs and deprecated
	targets.

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20030128.

2003-01-28	Joel Sherrill <joel@OARcorp.com>