@@ -1,7 +1,0 @@
-## $Id$
-
-
-SUBDIRS = update cpu
-
-include $(top_srcdir)/automake/subdirs.am
-include $(top_srcdir)/automake/host.am
